// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PushToMDM />  render tests  should match snapshot if configuredMDMType is configured 1`] = `
<div>
  <span
    aria-live="assertive"
    className="sr-only"
    role="alert"
  >
    
  </span>
  <button
    aria-disabled={false}
    className="push-button fn-secondary"
    id="pushBtn12345"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Re-Push to MDM",
        }
      }
    />
  </button>
</div>
`;

exports[`<PushToMDM />  render tests  should match snapshot if configuredMDMType is null 1`] = `
<div>
  <span
    aria-live="assertive"
    className="sr-only"
    role="alert"
  >
    
  </span>
  <button
    aria-disabled={true}
    className="push-button fn-primary"
    id="pushBtn12345"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Push to MDM",
        }
      }
    />
  </button>
</div>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is FAILED 1`] = `
<div>
  <span
    aria-live="assertive"
    className="sr-only"
    role="alert"
  >
    
  </span>
  <button
    aria-disabled={false}
    className="push-button fn-primary"
    id="pushBtn12345"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Push to MDM",
        }
      }
    />
  </button>
</div>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is IN_PROGRESS 1`] = `
<div>
  <span
    aria-live="assertive"
    className="sr-only"
    role="alert"
  >
    
  </span>
  <button
    aria-disabled={false}
    className="push-button fn-primary deaden"
    id="pushBtn12345"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    <i
      aria-hidden="true"
      className="icon-reload"
    />
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Pushing&hellip;",
        }
      }
    />
  </button>
</div>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is INSTALLED 1`] = `
<div>
  <span
    aria-live="assertive"
    className="sr-only"
    role="alert"
  >
    
  </span>
  <button
    aria-disabled={false}
    className="push-button fn-secondary"
    id="pushBtn12345"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Re-Push to MDM",
        }
      }
    />
  </button>
</div>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is INSTALLED_UPDATABLE 1`] = `
<div>
  <span
    aria-live="assertive"
    className="sr-only"
    role="alert"
  >
    
  </span>
  <button
    aria-disabled={false}
    className="push-button fn-primary"
    id="pushBtn12345"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Push to MDM",
        }
      }
    />
  </button>
</div>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is NOT_INSTALLED 1`] = `
<div>
  <span
    aria-live="assertive"
    className="sr-only"
    role="alert"
  >
    
  </span>
  <button
    aria-disabled={false}
    className="push-button fn-primary"
    id="pushBtn12345"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Push to MDM",
        }
      }
    />
  </button>
</div>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is PENDING 1`] = `
<div>
  <span
    aria-live="assertive"
    className="sr-only"
    role="alert"
  >
    
  </span>
  <button
    aria-disabled={false}
    className="push-button fn-primary deaden"
    id="pushBtn12345"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    <i
      aria-hidden="true"
      className="icon-reload"
    />
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Pushing&hellip;",
        }
      }
    />
  </button>
</div>
`;
